2015-02-25  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am:
	(download-nashorn): Don't download unless
	enable_downloading is set.
	(download-hotspot): Likewise.

2012-04-11  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(download-openjdk): Don't download unless
	enable_downloading is set.
	(download-cacao): Likewise.
	(download-jamvm): Likewise.
	* NEWS: Updated.
	* acinclude.m4:
	(IT_CHECK_FOR_DOWNLOADING): New option
	--disable-downloading.
	* configure.ac: Call IT_CHECK_FOR_DOWNLOADING.

2014-09-10  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am:
	(EXTRA_DIST): Remove references to debian
	and jamvm patch directories that no longer
	exist.
	* NEWS: Updated.

2014-09-04  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am:
	(ICEDTEA_CONFIGURE): Add update version,
	build number and milestone options.
	(ICEDTEA_ENV): Drop BUILD_NUMBER,
	JDK_UPDATE_VERSION, JRE_RELEASE_VERSION
	and MILESTONE, which appear to be no
	longer used.

2013-09-10  Andrew John Hughes  <gnu.andrew@redhat.com>

	* Makefile.am:
	(BUILD_VERSION): Renamed from OPENJDK_VERSION.
	(COMBINED_VERSION): Use BUILD_VERSION.
	(ICEDTEA_ENV): Likewise.
	(dist-openjdk): Should really use COMBINED_VERSION.
	(dist-openjdk-fsg): Likewise.
	(dist-openjdk-fsg-tz): Additional target which
	makes an xz tarball instead of a zip (for Jiri ;)

2014-09-03  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Add bug reference for system LCMS support.

2014-08-29  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Add bug reference for AArch64 import.

2014-02-24  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Add Gentoo bug reference for
	PaX update.

2014-02-21  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* acinclude.m4:
	(IT_WITH_PAX): Leave PAX_COMMAND with the empty
	string rather than "not specified" to avoid build
	failures.
	* pax-mark-vm.in: Update PAX_COMMAND check.
